[package]
name = "manix-imgui"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard = "0.5"
glium = { version = "0.29.1", default-features = true }
imgui = { version = "0.7.0" }
imgui-glium-renderer = { version = "0.7.0" }
imgui-winit-support = { version = "0.7.1" }
manix = { path = "/home/clark/code/personal/manix" }
tokio = { version = "1", features = ["full"] }

[profile.dev]
incremental = false